# dune-pnp

./: .gitignore  Makefile.am  configure.ac  dune-pnp.pc.in  dune.module
doc/: Makefile.am
doc/doxygen/: Doxylocal
dune/: Makefile.am
dune/pnp/: Makefile.am  pnp.hh
m4/: Makefile.am  dune-pnp.m4
src/: GridLearning.cc  GridLearning.hh  Makefile.am  btype.hh  datawriter.hh  diff_operator.hh  diffusion_operator.hh  diffusion_toperator.hh  dirichlet_bc.hh  dune_pnp.cc  example02_operator.hh  example03_operator.hh  example03_toperator.hh  instationary_pnp_from_pb.hh  instationary_pnp_from_pb_md.hh  ionFlux.hh  pb_operator.hh  pimp_my_makefile.py  pnp_datawriter.hh  pnp_operator.hh  pnp_solver_main.cc  pnp_solver_main.hh  pnp_toperator.hh  poisson_operator.hh  potential.hh  stat_diff_eq.cc  stationary_diffusion.hh  stationary_pnp.hh  stationary_pnp_from_pb.hh  sysparams.cc  sysparams.hh
test/: config.cfg  cylinder.msh  cylinder_config.cfg  mesh.msh  pore.cfg
test/one_wall_dh/: one_wall.cfg  one_wall.geo  one_wall.gp  one_wall.msh
test/pore_pnp/: pore.cfg  pore.geo  pore.msh
test/pore_without_dna/: pore.cfg  pore_without_dna.geo
test/sphere_pb/: sphere.cfg  sphere.geo  sphere.msh
